--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,17 @@
     <string name="enter_mobile_number_text">Enter mobile number to find your account and send OTP code.</string>
     <string name="verify_text">Hello<font color="#00A6A6"> Mostafa </font>. Enter the OTP code sent to you at mobile number <font color="#00A6A6">+201024952995</font></string>
     <string name="reset_pass">Create new password to your account with mobile number<font color="#00A6A6"> +20 114 933 6618</font></string>
-    <string name="step_5">Step 5: Bank account <font color="#FFB21C">(Optional)</font></string>
+    <string name="step_3">Step 3: Bank account <font color="#FFB21C">(Optional)</font></string>
     <string name="privacy">By continue you agree to AtmoDrive’s<font color="#00A6A6"> Terms &amp; Conditions</font> and <font color="#00A6A6">Privacy Policy</font></string>
-    <string-array name="spinner_items">
-        <item>gray</item>
-        <item>red</item>
-        <item>black</item>
-        <!-- Add more items as needed -->
-    </string-array>
+    <string name="login">Login</string>
+    <string name="_1024952995">1024952995</string>
+    <string name="send_code">send code</string>
+    <string name="step_1_personal_information">Step 1: Personal information</string>
+    <string name="id_front">ID (Front)</string>
+    <string name="id_back">ID (Back)</string>
+    <string name="car_images_6_sides">Car images (6 sides)</string>
+    <string name="car_license_front">Car license (Front)</string>
+    <string name="step_2_vehical_information">Step 2: Vehical Information</string>
+    <string name="submit_and_continue">Submit and Continue</string>
+    <string name="submit_information">Submit information</string>
 </resources>
