--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="step_2_vehical_information">Step 2: Vehical Information</string>
     <string name="submit_and_continue">Submit and Continue</string>
     <string name="submit_information">Submit information</string>
+    <string name="confirm">Confirm</string>
 </resources>
